I think this should validate now. Added Doctype and <html>

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+<html>
 <head>
 <title>Hello, World</title>
 </head>
@@ -6,3 +8,4 @@
 <p>This is the beginning of the home page. The markup is not going to validate, yet.</p>
 <p>I created, committed and pushed this page on my local machine. But now, I'm editing inline on github.</p>
 </body>
+</html>
