--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Hello, World!</h1>
-<p>I created, committed and pushed this page on my local machine. But now, I'm editing inline on github.</p>
+<p>I guess it's been about 5 months since I've done anything with my github website. So, here's a lame update just for giggles and grins.</p>
 </body>
 </html>
