Add link to Page 1
Gee, isn't this fun to bounce between doing the work on github
and doing it on my local machine?

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Hello, World!</h1>
 <p>I guess it's been about 5 months since I've done anything with my github website. So, here's a lame update just for giggles and grins.</p>
+<div><a href="page1.html">Page 1</a></div>
 </body>
 </html>
